--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,13 @@
 [tox]
 envlist =
-  py{36,37,38}-django{30,master},
+  py{35,36,37,38}-django{111,20,21,22,30,master},
 
 [travis:env]
 DJANGO =
+    1.11: django111
+    2.0: django20
+    2.1: django21
+    2.2: django22
     3.0: django30
     master: djangomaster
 
@@ -14,6 +18,10 @@ setenv =
     DJANGO_SETTINGS_MODULE=tests.settings
 deps =
     -e.[test]
+    django111: Django>=1.11,<2.0
+    django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<3.0
     django30: Django>=3.0a1,<3.1
     djangomaster: https://github.com/django/django/archive/master.zip
 commands = {posargs:py.test --cov=graphql_auth}
