--- a/.travis.yml
+++ b/.travis.yml
@@ -22,16 +22,53 @@ jobs:
     - env: DJANGO=master
 
   include:
+    - python: 3.5
+      env: DJANGO=1.11
+    - python: 3.5
+      env: DJANGO=2.0
+    - python: 3.5
+      env: DJANGO=2.1
+    - python: 3.5
+      env: DJANGO=2.2
+    - python: 3.5
+      env: DJANGO=3.0
+    - python: 3.5
+      env: DJANGO=master
+
+    - python: 3.6
+      env: DJANGO=1.11
+    - python: 3.6
+      env: DJANGO=2.0
+    - python: 3.6
+      env: DJANGO=2.1
+    - python: 3.6
+      env: DJANGO=2.2
     - python: 3.6
       env: DJANGO=3.0
     - python: 3.6
       env: DJANGO=master
 
     - python: 3.7
+      env: DJANGO=1.11
+    - python: 3.7
+      env: DJANGO=2.0
+    - python: 3.7
+      env: DJANGO=2.1
+    - python: 3.7
+      env: DJANGO=2.2
+    - python: 3.7
       env: DJANGO=3.0
     - python: 3.7
       env: DJANGO=master
 
+    - python: 3.8
+      env: DJANGO=1.11
+    - python: 3.8
+      env: DJANGO=2.0
+    - python: 3.8
+      env: DJANGO=2.1
+    - python: 3.8
+      env: DJANGO=2.2
     - python: 3.8
       env: DJANGO=3.0
     - python: 3.8
