--- a/tox.ini
+++ b/tox.ini
@@ -12,12 +12,23 @@ DJANGO =
 [testenv]
 passenv = *
 usedevelop = True
-setenv =
-    DJANGO_SETTINGS_MODULE=tests.settings
 deps =
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<3.0
     django30: Django>=3.0a1,<3.1
     djangomaster: https://github.com/django/django/archive/master.zip
     -e.[test]
-commands = {posargs:py.test --cov=graphql_auth}
+commands =
+  py.test \
+    --ds=tests.settings \
+    -m 'not settings_b' \
+    --cov=graphql_auth \
+    --cov-report=xml \
+    {posargs}
+  py.test \
+    --ds=tests.settings_b \
+    -m 'settings_b' \
+    --cov=graphql_auth \
+    --cov-report=xml \
+    --cov-append \
+    {posargs}
