--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,9 @@ include_trailing_comma=True
 force_grid_wrap=0
 use_parentheses=True
 line_length=88
+
+[flake8]
+exclude = setup.py,docs/*,testproject/*,tests,quickstart/
+max-line-length = 88
+extend-ignore = E203
+ignore = apps.py F401, utils.py W503
