--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ nav:
   - Relay: relay.md
   - Settings: settings.md
   - API: api.md
+  - Contributing: contributing.md
   - Community: community.md
   - Changelog: changelog.md
   - Contributors: contributors.md
